<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.continuuity</groupId>
  <artifactId>reactor</artifactId>
  <version>2.3.1</version>
  <packaging>pom</packaging>
  <name>Continuuity Reactor</name>

  <organization>
    <name>Continuuity</name>
    <url>http://www.continuuity.com</url>
  </organization>

  <repositories>
    <repository>
      <id>apache.snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>nexus</id>
      <name>continuuity-internal</name>
      <url>https://repository.continuuity.com/service/local/staging/deploy/maven2</url>
    </repository>
    <snapshotRepository>
      <id>continuuity</id>
      <url>https://repository.continuuity.com/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>

    <findbugs.jsr305.version>2.0.1</findbugs.jsr305.version>
    <gson.version>2.2.4</gson.version>
    <guava.version>13.0.1</guava.version>
    <slf4j.version>1.7.5</slf4j.version>
    <twill.version>0.3.0-incubating-SNAPSHOT</twill.version>
  </properties>

  <modules>
    <module>common-unit-test</module>
    <module>continuuity-api</module>
    <module>parent</module>
    <module>common</module>
    <module>passport-api</module>
    <module>watchdog-api</module>
    <module>kafka</module>
    <module>data-fabric</module>
    <module>data-fabric-tests</module>
    <module>hbase-compat-0.94</module>
    <module>hbase-compat-0.96</module>
    <module>passport</module>
    <module>watchdog</module>
    <module>watchdog-tests</module>
    <module>app-fabric</module>
    <module>security</module>
    <module>gateway</module>
    <module>explore-client</module>
    <module>explore</module>
    <module>continuuity-test</module>
    <module>reactor-master</module>
    <module>web-app</module>
    <module>tx-api</module>
    <module>tx-core</module>
    <module>tx-hbase-compat-0.94</module>
    <module>tx-hbase-compat-0.96</module>
    <module>singlenode</module>
    <module>distributions</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>${findbugs.jsr305.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.twill</groupId>
        <artifactId>twill-api</artifactId>
        <version>${twill.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.14.1</version>
          <configuration>
            <argLine>-Xmx4096m -Djava.awt.headless=true -XX:MaxPermSize=256m</argLine>
            <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
            <reuseForks>false</reuseForks>
            <reportFormat>plain</reportFormat>
            <systemPropertyVariables>
              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
            </systemPropertyVariables>
            <includes>
              <include>**/*TestsSuite.java</include>
              <include>**/Test*.java</include>
              <include>**/*Test.java</include>
              <include>**/*TestCase.java</include>
            </includes>
            <excludes>
              <exclude>**/*TestRun.java</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>2.12.1</version>
          <executions>
            <execution>
              <id>validate</id>
              <phase>process-test-classes</phase>
              <configuration>
                <configLocation>checkstyle.xml</configLocation>
                <suppressionsLocation>suppressions.xml</suppressionsLocation>
                <encoding>UTF-8</encoding>
                <consoleOutput>true</consoleOutput>
                <failsOnError>true</failsOnError>
                <includeTestSourceDirectory>true</includeTestSourceDirectory>
              </configuration>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.12.1</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>examples</id>
      <modules>
        <module>examples</module>
      </modules>
    </profile>

    <profile>
      <!-- Profile for release. Includes building of source and javadoc jars. -->
      <id>release</id>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-source-plugin</artifactId>
              <version>2.2.1</version>
              <configuration>
                <excludeResources>true</excludeResources>
              </configuration>
              <executions>
                <execution>
                  <id>attach-sources</id>
                  <phase>package</phase>
                  <goals>
                    <goal>jar-no-fork</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.9</version>
              <configuration>
                <excludePackageNames>*.internal.*</excludePackageNames>
                <stylesheetfile>${project.parent.basedir}/distributions/src/javadoc/stylesheet.css</stylesheetfile>
                <links>
                  <link>http://download.oracle.com/javase/6/docs/api/</link>
                </links>
                <bottom>
                  <![CDATA[Copyright &#169; 2012-2014 <a href="http://www.continuuity.com">Continuuity Inc</a>. All rights reserved.]]>
                </bottom>
              </configuration>
              <executions>
                <execution>
                  <id>javadoc</id>
                  <goals>
                    <goal>javadoc</goal>
                  </goals>
                </execution>
                <execution>
                  <id>attach-javadoc</id>
                  <phase>package</phase>
                  <goals>
                    <goal>jar</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-deploy-plugin</artifactId>
              <version>2.8</version>
            </plugin>
          </plugins>
        </pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.9.1</version>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>javadocs</id>
      <reporting>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-project-info-reports-plugin</artifactId>
            <version>2.7</version>
            <reportSets>
              <reportSet>
                <reports/>
              </reportSet>
              <reportSet>
                <id>aggregate</id>
                <inherited>false</inherited>
                <reports>
                  <report>index</report>
                </reports>
              </reportSet>
            </reportSets>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.9</version>
            <configuration>
              <excludePackageNames>*.internal.*</excludePackageNames>
              <stylesheetfile>${project.parent.basedir}/distributions/src/javadoc/stylesheet.css</stylesheetfile>
              <links>
                <link>http://download.oracle.com/javase/6/docs/api/</link>
              </links>
              <bottom>
                <![CDATA[Copyright &#169; 2012-2014 <a href="http://www.continuuity.com">Continuuity Inc</a>. All rights reserved.]]>
              </bottom>
            </configuration>
            <reportSets>
              <reportSet>
                <reports>
                  <report>javadoc</report>
                </reports>
              </reportSet>
            </reportSets>
          </plugin>
        </plugins>
      </reporting>
    </profile>
  </profiles>

</project>
